# higherorderpython

./: .coverage  README.md  pyproject.toml
hop/: ch1.py  ch2.py  utils.py
hop/ch2/: calc.py  dispatch.py
hop/ch3/: fib.py
hop/ch4/: crawler.py  db.py  dir.py  genes.py  iterator.py  perm.py
hop/ch5/: intpart.py  partitions.py  search.py  tailcall.py
hop/ch6/: hamming.py  list.py  regex.py  regexgen.py
tests/: test_ch1.py  test_ch3.py  test_ch4.py  test_ch5.py  test_ch6.py
tests/ch2/: .coverage  example.conf  extra.conf  test_ch2.py
